$Id$

== Transaction::simple 1.3.0
* Updated to fix a lot of warnings.
* Added a per-transaction-object list of excluded instance variables.
* Moved Transaction::simple::ThreadSafe to transaction/simple/threadsafe.
* Added transaction groups. Transaction groups are wrapper objects to allow
  the coordination of transactions with a group of objects. There are both
  normal and threadsafe versions of transaction groups.

== Transaction::Simple 1.2.0
* Added a RubyGem.
* Added a block form of Transaction::Simple.

== Transaction::Simple 1.1.1
* Cleaned up some documentation.

== Transaction::Simple 1.1
* Added Transaction::Simple::ThreadSafe for truly atomic and thread-safe
  transactions.
* Fixed the description of Transaction::Simple to note that it is *not* atomic
  because it is not implicitly thread-safe.
* Added support for named transactions. Named transactions can be used to make
  checkpoints that can be committed, aborted, or rewound without explicitly
  committing, aborting, or rewinding the intervening transactions.

== Transaction::Simple 1.0
* Created. Initial release.