@@ -3,4 +3,4 @@ Installing this package is as simple as:
 % ruby install.rb
 
 Alternatively, you can juse the RubyGem version of Transaction::Simple
-available as transaction-simple 1.3.0.gem from the usual sources.
+available as transaction-simple-1.3.0.gem from the usual sources.
